--- a/static/slides/05-slr-conditions.html
+++ b/static/slides/05-slr-conditions.html
@@ -88,6 +88,16 @@ The data set contains the "Tomatometer" score (.term[critics]) and audience scor
 &lt;img src="05-slr-conditions_files/figure-html/unnamed-chunk-5-1.png" width="80%" style="display: block; margin: auto;" /&gt;
 
 ---
+class: middle
+
+.eq[
+`$$Y|X \sim N(\beta_0 + \beta_1 X, \sigma_\epsilon^2)$$`
+]
+
+
+&lt;img src="05-slr-conditions_files/figure-html/unnamed-chunk-6-1.png" style="display: block; margin: auto;" /&gt;
+
+---
 
 ## Model conditions
 
@@ -120,7 +130,7 @@ class: middle, center
 
 
 
-&lt;img src="05-slr-conditions_files/figure-html/unnamed-chunk-7-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="05-slr-conditions_files/figure-html/unnamed-chunk-8-1.png" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -128,7 +138,7 @@ class: middle, center
 
 --
 
-&lt;img src="05-slr-conditions_files/figure-html/unnamed-chunk-8-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="05-slr-conditions_files/figure-html/unnamed-chunk-9-1.png" style="display: block; margin: auto;" /&gt;
 
 --
 
@@ -138,7 +148,7 @@ class: middle, center
 
 ## ❌ Violation: distinguishable pattern
 
-&lt;img src="05-slr-conditions_files/figure-html/unnamed-chunk-9-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="05-slr-conditions_files/figure-html/unnamed-chunk-10-1.png" style="display: block; margin: auto;" /&gt;
 
 
 ---
@@ -147,7 +157,7 @@ class: middle, center
 
 --
 
-&lt;img src="05-slr-conditions_files/figure-html/unnamed-chunk-10-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="05-slr-conditions_files/figure-html/unnamed-chunk-11-1.png" style="display: block; margin: auto;" /&gt;
 
 --
 
@@ -157,13 +167,13 @@ class: middle, center
 
 ## ❌ Violation: non-constant variance
 
-&lt;img src="05-slr-conditions_files/figure-html/unnamed-chunk-11-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="05-slr-conditions_files/figure-html/unnamed-chunk-12-1.png" style="display: block; margin: auto;" /&gt;
 
 ---
 
 ## Normal quantile plot
 
-&lt;img src="05-slr-conditions_files/figure-html/unnamed-chunk-12-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="05-slr-conditions_files/figure-html/unnamed-chunk-13-1.png" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -171,7 +181,7 @@ class: middle, center
 
 --
 
-&lt;img src="05-slr-conditions_files/figure-html/unnamed-chunk-13-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="05-slr-conditions_files/figure-html/unnamed-chunk-14-1.png" style="display: block; margin: auto;" /&gt;
 
 --
 
