--- a/static/slides/06-slr-partition-var.html
+++ b/static/slides/06-slr-partition-var.html
@@ -115,7 +115,7 @@ We will use .vocab[Analysis of Variance (ANOVA)] to partition the variation in t
 
 ## Response variable, `\(Y\)`
 
-&lt;img src="06-slr-partition-var_files/figure-html/unnamed-chunk-8-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="06-slr-partition-var_files/figure-html/unnamed-chunk-8-1.png" width="90%" style="display: block; margin: auto;" /&gt;
 
 ---
 
