--- a/public/schedule/week-03/index.html
+++ b/public/schedule/week-03/index.html
@@ -364,13 +364,13 @@ font-size: 18px;
 <tr>
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/05-slr-conditions.html">SLR: Conditions</a></td>
-<td>Update</td>
+<td><a href="https://warpwire.duke.edu/w/h08EAA/">SLR: Conditions</a></td>
 <td>AE 05</td>
 </tr>
 <tr>
 <td></td>
 <td><a href="https://sta210-fa20.netlify.app/slides/05-slr-prediction.html">SLR: Prediction</a></td>
-<td>Update</td>
+<td><a href="https://warpwire.duke.edu/w/E08EAA/">SLR: Prediction</a></td>
 <td></td>
 </tr>
 <tr>
