--- a/public/schedule/week-03/index.html
+++ b/public/schedule/week-03/index.html
@@ -364,7 +364,7 @@ font-size: 18px;
 <tr>
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/05-slr-conditions.html">SLR: Conditions</a></td>
-<td><a href="https://warpwire.duke.edu/w/h08EAA/">SLR: Conditions</a></td>
+<td><a href="https://warpwire.duke.edu/w/tU8EAA/">SLR: Conditions</a></td>
 <td>AE 05</td>
 </tr>
 <tr>
@@ -376,7 +376,7 @@ font-size: 18px;
 <tr>
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/06-slr-partition-var.html">SLR: Partitioning variability</a></td>
-<td>Update</td>
+<td><a href="https://warpwire.duke.edu/w/vU8EAA/">SLR: Partitioning variability</a></td>
 <td>AE 06</td>
 </tr>
 </tbody>
