--- a/public/schedule/week-03/index.html
+++ b/public/schedule/week-03/index.html
@@ -391,12 +391,8 @@ font-size: 18px;
 </thead>
 <tbody>
 <tr>
-<td>Update</td>
-<td></td>
-</tr>
-<tr>
-<td>Update</td>
-<td></td>
+<td><a href="https://leanpub.com/openintro-statistics">OpenIntro Statistics: 8.1 - 8.4 </a> <br> (click &ldquo;Read Free Sample&rdquo; to access PDF)</td>
+<td><strong>Required</strong></td>
 </tr>
 </tbody>
 </table>
