--- a/public/schedule/week-03/index.html
+++ b/public/schedule/week-03/index.html
@@ -365,7 +365,7 @@ font-size: 18px;
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/05-slr-conditions.html">SLR: Conditions</a></td>
 <td><a href="https://warpwire.duke.edu/w/tU8EAA/">SLR: Conditions</a></td>
-<td>AE 05</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-05-textbooks.html">AE 05: Price of Textbooks</a></td>
 </tr>
 <tr>
 <td></td>
