--- a/public/schedule/week-03/index.html
+++ b/public/schedule/week-03/index.html
@@ -377,7 +377,7 @@ font-size: 18px;
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/06-slr-partition-var.html">SLR: Partitioning variability</a></td>
 <td><a href="https://warpwire.duke.edu/w/vU8EAA/">SLR: Partitioning variability</a></td>
-<td>AE 06</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-06-partition-var.html">AE 06: Partitioning Variability</a></td>
 </tr>
 </tbody>
 </table>
