--- a/static/appex/ae-06-partition-var.html
+++ b/static/appex/ae-06-partition-var.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2020-09-01" />
+<meta name="date" content="2020-09-02" />
 
 <title>AE 06: Price of Textbooks</title>
 
@@ -364,7 +364,7 @@ summary {
 
 <h1 class="title toc-ignore">AE 06: Price of Textbooks</h1>
 <h3 class="subtitle">Partitioning Variability</h3>
-<h4 class="date">2020-09-01</h4>
+<h4 class="date">2020-09-02</h4>
 
 </div>
 
@@ -372,13 +372,22 @@ summary {
 <div id="class-announcements" class="section level2">
 <h2>Class Announcements</h2>
 <ul>
-<li>Lab 02 due today at 11:59p</li>
-<li>HW 01 due today at 11:59p</li>
+<li>Lab 02 + HW 01 due today at 11:59p</li>
 <li>Team labs start tomorrow</li>
-<li>Quiz 01: Sep 10
+<li>Quiz 01: Sep 10 - 11
 <ul>
-<li>Week 01 - 03, Lab 01 - 03, HW 01 - 02</li>
+<li>Week 01 - 03, Lab 01 - 02, HW 01, AE 01 - 06</li>
 <li>Open book, open note</li>
+<li>Will have 2 hours to take quiz once you open it</li>
+<li>May include computing + conceptual + analysis in practice</li>
+</ul></li>
+<li>Lab 01 grading + solutions (will be available on Sakai)</li>
+<li>Regrade requests
+<ul>
+<li>On Gradescope 24 hours after assignment returned and due within a week</li>
+<li>Consult the solutions + attend office hours</li>
+<li>Only submit if something was incorrectly graded.</li>
+<li>We reserve the right to regrade the entire assignment which could result in a lower grade</li>
 </ul></li>
 </ul>
 </div>
