--- a/static/hw/hw-02.html
+++ b/static/hw/hw-02.html
@@ -1761,20 +1761,20 @@ tidy(carb_model) %&gt;%
 </table>
 <ol style="list-style-type: decimal">
 <li><p>According to the <a href="https://www.starbucks.com/menu/product/1255/single?parent=%2Ffood%2Fbakery%2Fmuffins-and-breads">Starbucks menu</a>, pumpkin bread has 410 calories.</p>
-<p><strong>a.</strong> How many grams of carbohydrates do you predict to be in pumpkin bread? Show how you obtain this answer.</p>
+<p><strong>a.</strong> How many grams of carbohydrates do you predict to be in pumpkin bread? Show how you calculated this answer.</p>
 <p><strong>b. </strong> Show code and output to obtain a 90% confidence interval for the mean grams of carbohydrates in Starbucks food items with 410 calories.</p>
 <p><strong>c. </strong> Show code and output to obtain a 90% prediction interval for the grams of carbohydrates in food items with 410 calories.</p>
-<p><strong>d. </strong> You decide to purchase a piece of pumpkin bread, and you want to predict the amount of carbs in the piece. Should you use the interval from part b or part c? Briefly explain your choice.</p></li>
+<p><strong>d. </strong> You decide to purchase a piece of pumpkin bread, and you want to predict the amount of carbs in this piece. Should you use the interval from part b or part c? Briefly explain your choice.</p></li>
 <li><p>Let’s take a look at the model conditions. First, create a scatterplot of the residuals vs. predicted values. Show the code used to create the plot. Be sure your plot has informative axis labels and title. <em>Hint: You can use the <code>augment</code> function to calculate the residuals and predicted values for each observation.</em></p></li>
-<li><p>Make a histogram and Normal quantile plot of the residuals. Show the code used to create each plot. Be sure your plot has informative axis labels and title.</p></li>
-<li><p>Are the model conditions satisfed? Briefly explain your reasoning for each condition?</p>
+<li><p>Make a histogram and Normal quantile plot of the residuals. Show the code used to create each plot. Be sure your plots have informative axis labels and titles.</p></li>
+<li><p>Are the model conditions satisfied? Briefly explain your reasoning for each condition.</p>
 <ul>
 <li>Linearity</li>
 <li>Constant variance</li>
 <li>Normality</li>
 <li>Independence</li>
 </ul></li>
-<li><p>What percent of the variation in carbohydrates is explained by the calories in Starbucks food items? Show your work using the analysis of variance table.</p></li>
+<li><p>What percent of the variation in carbohydrates is explained by the calories in Starbucks food items? Show how you calculated this value from the ANOVA table.</p></li>
 </ol>
 </div>
 <div id="part-2-wrapping-up-slr" class="section level2">
@@ -1784,7 +1784,7 @@ tidy(carb_model) %&gt;%
 <li><p>What is one question you still have about simple linear regression or modeling in general?</p></li>
 <li><p>What is one thing you learned about simple linear regression?</p></li>
 </ul>
-<p>You must write a substantive response to receive credit. Responses equivalent “I don’t have any questions”will not receive credit.</p>
+<p>You must write a substantive response to receive credit, i.e. responses equivalent to “I don’t have any questions” are not considered substantive and will not receive credit.</p>
 </div>
 </div>
 <div id="submission" class="section level1">
@@ -1802,7 +1802,7 @@ tidy(carb_model) %&gt;%
 </thead>
 <tbody>
 <tr class="odd">
-<td>Part 1: Conceptual Problems</td>
+<td>Part 1: Conceptual questions</td>
 <td align="center">34</td>
 </tr>
 <tr class="even">
