--- a/static/hw/hw-03.html
+++ b/static/hw/hw-03.html
@@ -1362,18 +1362,18 @@ src: local('Source Code Pro Regular'), local('SourceCodePro-Regular'), url(data:
 @charset "UTF-8";
 
 html {
-font-size: 13pt;
-}
-p {
-font-size: 13pt;
+font-size: 17px;
 }
 body {
 font-family: 'Source Sans Pro', sans-serif;
-font-weight: 350;
+font-weight: 400;
 background-color: #fefefe;
 color: #222;
 counter-reset: li;
-font-size: 13pt;
+font-size: 17px;
+}
+p {
+font-size: 17px;
 }
 h1.title {
 font-weight: 700;
@@ -1391,10 +1391,9 @@ font-family: 'Source Sans Pro', sans-serif;
 font-weight: 400;
 color: #008eaa;
 }
-h3 {
-font-family: 'Source Sans Pro', sans-serif;
+h3.subtitle {
+font-style: normal;
 color: #008eaa;
-font-weight: 400;
 }
 h4 {
 font-style: normal;
@@ -1407,15 +1406,15 @@ line-height: 1;
 h4.author,
 h4.date {
 font-family: 'Source Sans Pro', sans-serif;
-font-weight: 300;
+font-weight: 350;
 }
 .numeral {
 font-family: "Source Sans Pro";
-font-weight: 300;
+font-weight: 350;
 }
 em {
 font-style: italic;
-font-weight: 300;
+font-weight: 350;
 font-family: "Source Sans Pro";
 }
 strong {
@@ -1427,34 +1426,39 @@ font-family: "Source Sans Pro";
 @media screen and (max-width: 760px) {
 pre {
 width: 100%;
-font-size: 16px;
+font-size: 15px;
+overflow-x: auto;
 }
 }
 code {
 font-family: 'Source Code Pro', Consolas, "Liberation Mono", Menlo, Courier, monospace;
-font-size: 15px;
+font-size: 17px;
 line-height: 1.6;
 }
-pre code {
-font-size: 15px;
+pre {
+background-color: #FFFFFF;
+
+
+border-width: 0px;
+border-radius: 4px;*/
+overflow-x: auto;
+padding: 1em;
+white-space: inherit;
+word-break: normal;
+word-wrap: normal;
+}
+pre.r {
+background-color: #F5F5F5;	
+white-space: inherit;
 }
 .marginnote code,
 .sidenote code {
-font-size: 1rem;
-}
-.marginnote{
-font-size: 13px;
-}
-pre {
-width: 100%;
-font-size: 16px;
-overflow-x: auto;
+font-size: 14px;
 }
 
 ol {
 
 padding-left: 0;
-font-size: 13pt;
 }
 ol>li {
 
@@ -1464,9 +1468,8 @@ list-style: none;
 width: 90%;
 padding-top: 10px;
 padding-bottom: 10px;
-padding-right: 0;
-padding-left: 90px;
-font-size: 13pt;
+padding-right: 0px;
+padding-left: 110px;
 }
 ol>li:before {
 
@@ -1474,22 +1477,34 @@ content: "Question " counter(li)".";
 
 counter-increment: li;
 position: absolute;
-color: #339898;
+color: #008eaa;
 left: -0.5px;
 font-weight: bold;
+margin-right: 10px;
 }
-ol ol>li:before {
-counter-reset: sub-item;
-
-
-position: absolute;
-color: #339898;
-left: -0.5px;
-font-weight: bold;
-padding-left: 90px;
+ol ul {
+width: 92%;
 }
-.td {
-font-size: 10pt;
+ol ol {
+counter-reset: subitem;
+}
+td {
+font-size: 15px;
+}
+
+.footer {
+left: 0;
+bottom: 0;
+width: 100%;
+color: #7C878E;
+font-size: 14px;
+}
+
+div .commit {
+font-size: 16px;
+font-weight: 400;
+color: #aa008e;
+text-decoration: italic;
 }
 </style>
 
