--- a/public/schedule/week-03/index.html
+++ b/public/schedule/week-03/index.html
@@ -410,7 +410,7 @@ font-size: 18px;
 <td><strong>due Wed, Sep 9 11:59p</strong></td>
 </tr>
 <tr>
-<td>Lab 03</td>
+<td><a href="https://sta210-fa20.netlify.app/labs/lab-03-airbnb.html">Lab 03</a></td>
 <td><strong>due Wed, Sep 9 at 11:59p</strong></td>
 </tr>
 </tbody>
