--- a/static/labs/lab-03-airbnb.html
+++ b/static/labs/lab-03-airbnb.html
@@ -609,7 +609,13 @@ text-decoration: italic;
 </ol>
 <p><strong>You will use <code>clean_airbnb_300</code> for the remainder of the lab.</strong></p>
 <p><label for="tufte-mn-3" class="margin-toggle">⊕</label><input type="checkbox" id="tufte-mn-3" class="margin-toggle"><span class="marginnote"><span style="display: block;">Find out more about density plots on the <a href="https://ggplot2.tidyverse.org/reference/geom_density.html"><code>geom_density</code></a> reference page.</span> <span style="display: block;">See the <a href="https://patchwork.data-imaginist.com/">patchwork</a> reference page for more information.</span></span></p>
-<p>1.Make a histogram and a density plot to visualize the distribution of the predictor variable <code>review_scores_cleanliness</code>. Use the patchwork function to display the plots side-by-side. - What are 1 - 2 ways a density plot is similar to a histogram? - What are 1 - 2 ways a density plot differs from a histogram?</p>
+<ol style="list-style-type: decimal">
+<li>Make a histogram and a density plot to visualize the distribution of the predictor variable <code>review_scores_cleanliness</code>. Use the patchwork function to display the plots side-by-side.
+<ul>
+<li>What are 1 - 2 ways a density plot is similar to a histogram?</li>
+<li>What are 1 - 2 ways a density plot differs from a histogram?</li>
+</ul></li>
+</ol>
 <div class="commit">
 <p>✅ ⬆️ <b>Team Member 2</b>: Knit, commit and push your changes to GitHub with an appropriate commit message again. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.</p>
 <p></b>All other team members</b>: <b>Pull</b> to get the updated documents from GitHub. Click on the .Rmd file, and you should see the responses to exercises 4 - 6.</p>
