--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -255,7 +255,7 @@ table tbody tr:nth-child(odd){
     </div>
     
     <div class="section">
-        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-04/">Week 04</a>
+        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-04/">Week 04: ANOVA &#43; MLR</a>
         </div>
     </div>
     
@@ -672,11 +672,10 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 04</td>
             <td align="right" style="width:25%;text-align:right">Mon, Sep 07</td>
-            <td style="width:40%;text-align:left">ANOVA</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
+            <td style="width:40%;text-align:left">Comparing means with ANOVA</td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/07-anova.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
@@ -722,7 +721,30 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Thu, Sep 10</td>
-            <td style="width:40%;text-align:left">No Lab</td>
+            <td style="width:40%;text-align:left">No Lab: Take Quiz 01</td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-laptop fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="far fa-file-code fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/quiz/quiz-01.html">
+                    <i class="fas fa-check-square fa-lg"></i></a></td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
+            </td>
+        </tr>
+        <tr>
+                                 <td align="left" style="width:15%;text-align:right"></td>
+            <td align="right" style="width:25%;text-align:right">Fri, Sep 11</td>
+            <td style="width:40%;text-align:left">Quiz 01 due</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
