--- a/public/schedule/week-04/index.html
+++ b/public/schedule/week-04/index.html
@@ -365,7 +365,7 @@ font-size: 18px;
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/07-anova.html">Comparing means with ANOVA</a></td>
 <td><a href="https://warpwire.duke.edu/w/R2EEAA/">Comparing means with ANOVA</a></td>
-<td>AE 07</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-07-penguins.html">AE 07: Palmer Penguins</a></td>
 </tr>
 <tr>
 <td>Wednesday</td>
