add sep 9 slides

--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -697,10 +697,9 @@ table tbody tr:nth-child(odd){
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Sep 09</td>
             <td style="width:40%;text-align:left">Multiple linear regression (MLR)</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/08-mlr-intro.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
