--- a/public/schedule/week-04/index.html
+++ b/public/schedule/week-04/index.html
@@ -369,7 +369,7 @@ font-size: 18px;
 </tr>
 <tr>
 <td>Wednesday</td>
-<td>Multiple linear regression</td>
+<td><a href="https://sta210-fa20.netlify.app/slides/08-mlr-intro.html">Multiple linear regression</a></td>
 <td>Multiple linear regression</td>
 <td>AE 08</td>
 </tr>
@@ -387,6 +387,10 @@ font-size: 18px;
 <tr>
 <td><a href="https://leanpub.com/openintro-statistics">OpenIntro Statistics: 7.5 </a> <br> (click &ldquo;Read Free Sample&rdquo; to access PDF)</td>
 <td><strong>Required</strong></td>
+</tr>
+<tr>
+<td><a href="https://leanpub.com/openintro-statistics">OpenIntro Statistics: 9.1 - 9.4 </a> <br> (click &ldquo;Read Free Sample&rdquo; to access PDF)</td>
+<td>Optional</td>
 </tr>
 </tbody>
 </table>
