--- a/public/schedule/week-04/index.html
+++ b/public/schedule/week-04/index.html
@@ -370,7 +370,7 @@ font-size: 18px;
 <tr>
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/08-mlr-intro.html">Multiple linear regression</a></td>
-<td>Multiple linear regression</td>
+<td><a href="https://warpwire.duke.edu/w/k2gEAA/">Multiple linear regression</a></td>
 <td>AE 08</td>
 </tr>
 </tbody>
