--- a/public/schedule/week-04/index.html
+++ b/public/schedule/week-04/index.html
@@ -371,7 +371,7 @@ font-size: 18px;
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/08-mlr-intro.html">Multiple linear regression</a></td>
 <td><a href="https://warpwire.duke.edu/w/k2gEAA/">Multiple linear regression</a></td>
-<td>AE 08</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-08-questions.html">AE 08: Week 01 - 03 Questions</a></td>
 </tr>
 </tbody>
 </table>
