--- a/public/schedule/week-05/index.html
+++ b/public/schedule/week-05/index.html
@@ -364,12 +364,12 @@ font-size: 18px;
 <td>Monday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/09-mlr-inference.html">MLR: Inference</a></td>
 <td><a href="https://warpwire.duke.edu/w/G3EEAA/">MLR: Inference</a></td>
-<td>AE 09</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-09-harris-bank.html">AE 09: Wages at Harris Trust and Savings Bank</a></td>
 </tr>
 <tr>
 <td>Wednesday</td>
 <td>MLR: Types of predictors</td>
-<td>mLR: Types of predictors</td>
+<td>MLR: Types of predictors</td>
 <td>AE 10</td>
 </tr>
 </tbody>
