--- a/static/slides/10-mlr-predictor-types.html
+++ b/static/slides/10-mlr-predictor-types.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="author" content="Prof. Maria Tackett" />
     <script src="libs/font-awesome/kePrint/kePrint.js"></script>
+    <link href="libs/font-awesome/lightable/lightable.css" rel="stylesheet" />
     <link rel="stylesheet" href="sta210-slides.css" type="text/css" />
   </head>
   <body>
@@ -45,6 +46,9 @@ class: middle, center
 
 Today's data is a sample of 50 loans made through a  peer-to-peer lending club. The data is in the `loan50` data frame in the openintro R package.
 
+
+&lt;img src="10-mlr-predictor-types_files/figure-html/unnamed-chunk-3-1.png" style="display: block; margin: auto;" /&gt;
+
 ---
 
 ## Variables
@@ -58,12 +62,6 @@ Today's data is a sample of 50 loans made through a  peer-to-peer lending club. 
 - .vocab[`interest_rate`]: Interest rate for the loan
 
 
-
----
-
-## Response variable, `interest_rate`
-
-&lt;img src="10-mlr-predictor-types_files/figure-html/unnamed-chunk-4-1.png" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -90,29 +88,17 @@ Today's data is a sample of 50 loans made through a  peer-to-peer lending club. 
 |verified_incomeVerified        |    6.880|     1.801|     3.820|   0.000|    3.253|    10.508|
 |annual_income                  |   -0.021|     0.011|    -1.804|   0.078|   -0.043|     0.002|
 
----
-
-class: middle, center
-
-## Mean-centered variables
-
----
-
-## Interpreting the Intercept 
-
-
-|term                           | estimate| std.error| statistic| p.value|
-|:------------------------------|--------:|---------:|---------:|-------:|
-|(Intercept)                    |   10.726|     1.507|     7.116|   0.000|
-|debt_to_income                 |    0.671|     0.676|     0.993|   0.326|
-|verified_incomeSource Verified |    2.211|     1.399|     1.581|   0.121|
-|verified_incomeVerified        |    6.880|     1.801|     3.820|   0.000|
-|annual_income                  |   -0.021|     0.011|    -1.804|   0.078|
+--
 
 .question[
 - Describe the subset of borrowers who are expected to get an interest rate of 10.726% baesd on our model
 - Is this interpretation meaningful? Why or why not?
 ]
+---
+
+class: middle, center
+
+## Mean-centered variables
 
 ---
 
@@ -135,7 +121,7 @@ If we mean-center all quantitative variables, then the intercept is interpreted 
 
 
 
-&lt;img src="10-mlr-predictor-types_files/figure-html/unnamed-chunk-10-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="10-mlr-predictor-types_files/figure-html/unnamed-chunk-9-1.png" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -206,13 +192,13 @@ class: middle, center
 
 ---
 
-## Indicator variable for `annual_income`
+## Indicator variable for `verified_income`
 
 .small[
 
 ```r
 loan50 &lt;- loan50 %&gt;%
-* mutate(not_verified =
+  mutate(not_verified = 
            if_else(verified_income == "Not Verified", 1, 0),
          source_verified = 
            if_else(verified_income == "Source Verified", 1, 0),
@@ -221,6 +207,8 @@ loan50 &lt;- loan50 %&gt;%
   )
 ```
 ]
+
+--
 
 .small[
 
@@ -350,7 +338,9 @@ To account for this, we can include .vocab[interaction terms] in the model.
 
 
 
-&lt;img src="10-mlr-predictor-types_files/figure-html/unnamed-chunk-19-1.png" style="display: block; margin: auto;" /&gt;
+&lt;img src="10-mlr-predictor-types_files/figure-html/unnamed-chunk-18-1.png" style="display: block; margin: auto;" /&gt;
+
+--
 
 The lines are .vocab[not parallel] indicating there is an .vocab[interaction effect]. The slope of annual income differs based on the income verification. 
 
@@ -360,16 +350,68 @@ The lines are .vocab[not parallel] indicating there is an .vocab[interaction eff
 
 
 
-
-|term                                              | estimate| std.error| statistic| p.value|
-|:-------------------------------------------------|--------:|---------:|---------:|-------:|
-|(Intercept)                                       |    9.484|     0.989|     9.586|   0.000|
-|debt_inc_cent                                     |    0.691|     0.685|     1.009|   0.319|
-|annual_income_cent                                |   -0.007|     0.020|    -0.341|   0.735|
-|verified_incomeSource Verified                    |    2.157|     1.418|     1.522|   0.135|
-|verified_incomeVerified                           |    7.181|     1.870|     3.840|   0.000|
-|annual_income_cent:verified_incomeSource Verified |   -0.016|     0.026|    -0.643|   0.523|
-|annual_income_cent:verified_incomeVerified        |   -0.032|     0.033|    -0.979|   0.333|
+&lt;table&gt;
+ &lt;thead&gt;
+  &lt;tr&gt;
+   &lt;th style="text-align:left;"&gt; term &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; estimate &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; std.error &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; statistic &lt;/th&gt;
+   &lt;th style="text-align:right;"&gt; p.value &lt;/th&gt;
+  &lt;/tr&gt;
+ &lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; (Intercept) &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 9.484 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.989 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 9.586 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.000 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; debt_inc_cent &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.691 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.685 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1.009 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.319 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; annual_income_cent &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -0.007 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.020 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; -0.341 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.735 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; verified_incomeSource Verified &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 2.157 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1.418 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1.522 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.135 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;"&gt; verified_incomeVerified &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 7.181 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 1.870 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 3.840 &lt;/td&gt;
+   &lt;td style="text-align:right;"&gt; 0.000 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;background-color: #dce5b2 !important;"&gt; annual_income_cent:verified_incomeSource Verified &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; -0.016 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 0.026 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; -0.643 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 0.523 &lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+   &lt;td style="text-align:left;background-color: #dce5b2 !important;"&gt; annual_income_cent:verified_incomeVerified &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; -0.032 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 0.033 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; -0.979 &lt;/td&gt;
+   &lt;td style="text-align:right;background-color: #dce5b2 !important;"&gt; 0.333 &lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
 
 ---
 
