--- a/public/schedule/week-05/index.html
+++ b/public/schedule/week-05/index.html
@@ -368,8 +368,8 @@ font-size: 18px;
 </tr>
 <tr>
 <td>Wednesday</td>
-<td>MLR: Types of predictors</td>
-<td>MLR: Types of predictors</td>
+<td><a href="https://sta210-fa20.netlify.app/slides/10-mlr-predictor-types.html">MLR: Types of predictors</a></td>
+<td>[MLR: Types of predictors]</td>
 <td>AE 10</td>
 </tr>
 </tbody>
