add lec 10 video

--- a/public/schedule/week-05/index.html
+++ b/public/schedule/week-05/index.html
@@ -369,7 +369,7 @@ font-size: 18px;
 <tr>
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/10-mlr-predictor-types.html">MLR: Types of predictors</a></td>
-<td>[MLR: Types of predictors]</td>
+<td><a href="https://warpwire.duke.edu/w/d3UEAA/">MLR: Types of predictors</a></td>
 <td>AE 10</td>
 </tr>
 </tbody>
